<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="logo">logo</string>
    <string name="logo_login">logo</string>
    <string name="welcome_to_twittwit">Welcome to Twittwit</string>
    <string name="see_what_s_happening_in_the_world_right_now">See what\'s happening in the world right now</string>

    <string name="compose">Compose</string>
    <string name="tweet">tweet</string>
    <string name="profile_image">Profile Image</string>
    <string name="foo">Foo</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="log_in">Log in</string>
    <string name="time">time</string>
    <string name="reply">reply</string>
    <string name="retweet">retweet</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>

</resources>